--- a/src/css/general.scss
+++ b/src/css/general.scss
@@ -22,4 +22,9 @@ body {
   color: $dark-color;
   font-family: "M PLUS Rounded 1c", sans-serif;
   letter-spacing: 0.05rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 95vh;
+  min-width: 95vw;
 }
