--- a/src/css/categories.scss
+++ b/src/css/categories.scss
@@ -46,8 +46,13 @@
     transition: all 0.2s;
 
     &:hover,
-    &:hover .card-info {
+    &:hover .card-info,
+    &:hover .card-score {
       background-color: $main-color-hover;
+    }
+
+    &:hover .card-score {
+      transform: translateY(0);
     }
   }
 
@@ -100,6 +105,34 @@
 
     &:hover {
       background-color: $main-color-hover;
+    }
+  }
+
+  &-score {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transform: translateY(100%);
+    width: 100%;
+    border-radius: 0;
+    color: $dark-color;
+    font-size: 1.2rem;
+    padding-left: 1.5rem;
+    transition: all 0.2s, transform 0.5s;
+
+    &::before {
+      content: "";
+      display: block;
+      position: absolute;
+      left: 20%;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 1.8rem;
+      height: 1.8rem;
+      background: url(../assets/svg/score.svg);
+      background-size: 100%;
+      filter: invert(25%) sepia(17%) saturate(514%) hue-rotate(137deg)
+        brightness(96%) contrast(95%);
     }
   }
 }
