--- a/src/css/categories.scss
+++ b/src/css/categories.scss
@@ -1,5 +1,7 @@
 .categories {
   display: none;
+  // opacity: 0;
+  transition: opacity 0.2s;
   &-container {
     display: flex;
     flex-direction: column;
@@ -8,14 +10,9 @@
 
   .logo-wrapper {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-  }
-
-  .logo {
-    width: 10rem;
-    height: 10rem;
+    width: 100%;
   }
 
   .main-title {
@@ -26,6 +23,16 @@
   &-btn {
     display: block;
     margin: 1rem 0;
+  }
+}
+
+.btn-wrapper {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+
+  .btn {
+    width: 8rem;
   }
 }
 
