--- a/src/css/general.scss
+++ b/src/css/general.scss
@@ -31,6 +31,7 @@ body {
 
 .container {
   max-width: 22.5rem;
+  min-width: 18rem;
 }
 
 ul {
@@ -40,7 +41,7 @@ ul {
 .logo {
   width: 6rem;
   height: 6rem;
-  // margin-top: 1rem;
+  margin-top: 1rem;
   background: url(../assets/png/logo.png);
   background-position: center;
   background-size: contain;
