--- a/src/css/initial.scss
+++ b/src/css/initial.scss
@@ -1,5 +1,6 @@
 .initial {
-  display: none;
+  // display: none;
+  transition: opacity 0.2s;
 }
 
 .initial-container {
@@ -8,8 +9,12 @@
   justify-content: center;
   align-items: center;
 
+  .logo {
+    margin-top: 0.5rem;
+  }
+
   .category-selection {
-    margin: 2rem 0;
+    margin: 0.5rem 0 1.5rem;
     &-artists,
     &-pictures {
       position: relative;
@@ -77,5 +82,12 @@
     &:hover::before {
       transform: translateY(-50%) rotate(60deg);
     }
+  }
+
+  .github-link {
+    text-decoration: none;
+    color: $dark-color;
+    font-size: 1.2rem;
+    margin-top: 1rem;
   }
 }
