--- a/src/css/settings.scss
+++ b/src/css/settings.scss
@@ -1,5 +1,7 @@
 .settings {
   display: none;
+  // opacity: 0;
+  transition: opacity 0.2s;
 
   &-container {
     display: flex;
@@ -27,12 +29,13 @@
 .settings-top {
   display: flex;
   margin-bottom: 1.5rem;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 
   .title {
     text-transform: uppercase;
-    align-self: center;
     font-size: 1.5rem;
-    margin-left: 2rem;
   }
 }
 
