--- a/src/css/settings.scss
+++ b/src/css/settings.scss
@@ -1,5 +1,5 @@
 .settings {
-  display: none;
+  // display: none;
   // opacity: 0;
   transition: opacity 0.2s;
 
@@ -87,6 +87,29 @@
       border-radius: 50%;
       cursor: pointer;
     }
+  }
+}
+
+.time-amount {
+  display: flex;
+  justify-content: center;
+  margin: 1rem 0 1.5rem 0;
+
+  &-btn {
+    width: 2rem;
+    height: 2rem;
+    border-radius: 50%;
+    text-align: center;
+    background-color: rgba(255, 187, 152, 0.9);
+  }
+
+  &-input {
+    border: none;
+    background: inherit;
+    text-align: center;
+    width: 2.5rem;
+    font-size: 1.5rem;
+    outline: none;
   }
 }
 
