--- a/src/css/settings.scss
+++ b/src/css/settings.scss
@@ -101,15 +101,21 @@
     border-radius: 50%;
     text-align: center;
     background-color: rgba(255, 187, 152, 0.9);
+    outline: none;
   }
 
   &-input {
+    display: flex;
     border: none;
-    background: inherit;
+    background: transparent;
     text-align: center;
-    width: 2.5rem;
+    width: 3rem;
     font-size: 1.5rem;
     outline: none;
+
+    &::-webkit-inner-spin-button {
+      display: none;
+    }
   }
 }
 
