--- a/src/css/questions-artists.scss
+++ b/src/css/questions-artists.scss
@@ -1,6 +1,6 @@
 .questions {
   &-artists {
-    display: none;
+    // display: none;
     &-container {
       display: flex;
       flex-direction: column;
