--- a/src/css/popup.scss
+++ b/src/css/popup.scss
@@ -9,7 +9,7 @@
   overflow-y: auto;
   overflow-x: hidden;
   visibility: hidden;
-  // opacity: 0;
+  opacity: 0;
 
   &.active {
     visibility: visible;
