--- a/src/css/popup.scss
+++ b/src/css/popup.scss
@@ -73,14 +73,16 @@
     top: -50%;
     color: #fcad85;
     font-size: 20rem;
-    transition: top 1s;
     visibility: hidden;
     opacity: 0;
+    transform: scale(3);
+    transition: top 1s, transform 1s;
 
     &.active {
       visibility: visible;
       opacity: 1;
       top: 15%;
+      transform: scale(1);
       font-size: 8rem;
     }
   }
