--- a/src/css/categories.scss
+++ b/src/css/categories.scss
@@ -52,14 +52,12 @@
     overflow: hidden;
     transition: all 0.2s;
 
-    &:hover,
-    &:hover .card-info,
-    &:hover .card-score {
-      background-color: $main-color-hover;
-    }
-
     &:hover .card-score {
       transform: translateY(0);
+    }
+
+    &:hover .card-score.active {
+      transform: translateY(100%);
     }
   }
 
@@ -89,7 +87,6 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    // filter: grayscale(100%);
   }
 
   &-info {
@@ -109,10 +106,6 @@
     &.active-info {
       top: 0;
     }
-
-    &:hover {
-      background-color: $main-color-hover;
-    }
   }
 
   &-score {
@@ -125,7 +118,7 @@
     color: $dark-color;
     font-size: 1.2rem;
     padding-left: 1.5rem;
-    transition: all 0.2s, transform 0.5s;
+    transition: all 0.2s, transform 0.4s;
 
     &::before {
       content: "";
