--- a/src/css/popup.scss
+++ b/src/css/popup.scss
@@ -2,11 +2,11 @@
   position: fixed;
   left: 0;
   top: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 20;
-  overflow-y: auto;
+  overflow-y: hidden;
   overflow-x: hidden;
   visibility: hidden;
   // opacity: 0;
@@ -16,22 +16,15 @@
     opacity: 1;
   }
 
-  // &.active &-wrapper {
-  //   transform: translate(0px, 0px);
-  // }
-
   &-wrapper {
-    min-height: 100%;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    // padding: 30px 10px;
-    // transform: translate(-100%, 0px);
   }
 
   &-content {
     position: relative;
-    min-height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -39,7 +32,6 @@
     width: 320px;
     height: 400px;
     background-color: #fcefe0;
-    // border: 0.2rem solid rgb(253, 110, 110);
     border: 0.2rem solid lightgreen;
 
     img {
