--- a/src/css/initial.scss
+++ b/src/css/initial.scss
@@ -21,7 +21,7 @@
       height: 12rem;
       width: 20rem;
       cursor: pointer;
-      transition: all 0.2s;
+      transition: all 0.2s, transform 1s, opacity 1s;
       overflow: hidden;
 
       &:hover {
