--- a/src/css/initial.scss
+++ b/src/css/initial.scss
@@ -76,11 +76,11 @@
       height: 1.8rem;
       background: url(../assets/svg/settings.svg);
       background-size: 100%;
-      transition: all 0.2s;
+      transition: all 2s;
     }
 
     &:hover::before {
-      transform: translateY(-50%) rotate(60deg);
+      transform: translate(-200%, -50%) rotate(-360deg);
     }
   }
 
